--- a/PerformanceAddInWeb/Web.config
+++ b/PerformanceAddInWeb/Web.config
@@ -12,9 +12,9 @@
     <add key="ClientId" value="e3324cfe-186f-4732-bab8-f84192093e0a" />
     <add key="ClientSecret" value="icWg0yt4hL3npa7pFJIwh31oa+OAMHrVVvNMQ+kFcMc=" />
     <add key="RedisConnString" value="ConnectionString" />
-    <add key="UserName" value="admin@MOD738287.onmicrosoft.com" />
-    <add key="Password" value="pass@word1" />
-    <add key="SiteCollectionUrl" value="https://mod738287.sharepoint.com/sites/Portal" />
+    <add key="UserName" value="" />
+    <add key="Password" value="" />
+    <add key="SiteCollectionUrl" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
